# kafka-pharma-example

./: README.md  docker-compose.yml  main.py  pharma_consumer.py  pharma_producer.py  pyproject.toml  setup_topic.py
