[project]
name = "pharma-adv-kafka-example"
version = "0.1.0"
description = "This project simulates an enterprise-grade, highly available Apache Kafka data pipeline designed to ingest, route, and process live IoT sensor telemetry from multiple manufacturing zones."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "confluent-kafka>=2.13.2",
]
